src/objects/Poker_Game__c.object
<CustomObject>
    <description>Tracks the status and outcome of a game. It is the parent object upon which all other game objects are related.</description>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>Date and time the game ended.</description>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Activity__c</fullName>
        <description>The date and time of the last activity (creation, estimate, story update, etc)</description>
        <label>Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Started_Date__c</fullName>
        <description>Date and time the game started.</description>
        <label>Started Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the poker game.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Poker Game</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Poker Games</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>